--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
     <div id="registerResult"></div>
   </div>
 
+  <div class="background-image">
+    <!-- Your content here -->
+  </div>
+
   <script src="./js/scripts.js"></script>
 </body>
 </html>
