--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     <div id="registerResult"></div>
   </div>
 
-  <div class="background-image">
-    <!-- Your content here -->
+  <div class="image-container">
+    <img src="img/your-image.jpg" alt="Description of your image">
   </div>
 
   <script src="./js/scripts.js"></script>
